samples/_failures_safe/1761129099_7b096c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e5ad693.c: In function ‘main’:
./samples/SAFE/__tmp_0e5ad693.c:134:36: error: missing terminating ' character
  134 |     if (len > 0 && input[len-1] == '\n
      |                                    ^~~
./samples/SAFE/__tmp_0e5ad693.c:134:5: error: expected expression at end of input
  134 |     if (len > 0 && input[len-1] == '\n
      |     ^~
./samples/SAFE/__tmp_0e5ad693.c:134:5: error: expected declaration or statement at end of input
